--- a/hw1.html
+++ b/hw1.html
@@ -6,16 +6,16 @@
 		<div style="width:100%;height:510px;">
 			<img src="http://resource.haorenao.cn/back.jpg">
 			<div style="font-size:40px;position:absolute;top:250px;text-align: center;width:1000px;color:white;">
-				计算机网络
+				计算机工程
 			</div>
 			<div style="font-size: 20px;position: absolute;top:310px;text-align: center;width:1000px;color: white;">
-				计算机网络
+				计算机工程
 			</div>
 		</div>
 		<div style="width: 1000px;height: 90px;text-align: center;margin-top: 30px;color:gray;">
-			<p>2018计算机网络</p>
-			<p>考试日期：2019.1.3</p>
-			<p>Leave me alone.</p>
+			<p>2020计算机网络</p>
+			<p>考试日期：未知</p>
+			<p>学生：王苹汛</p>
 		</div>
 		<a href="http://elearning.fudan.edu.cn">Elearning
 		</a>
